@@ -1,5 +1,6 @@
 Changes in 3.2rc1 :
 - Fix bug in webgui causing wrong content-length to be returned in some cases
+- Add cmake check for libtaskmanager which is needed by the plasma applet
 
 Changes in 3.2beta1 :
 - Ask to create directory in fileselectdlg, if it does not exist (163965)
